--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "main": "index.ts",
   "license": "MIT",
   "typescript": "^4.4.2",
-  "type": "module",
   "module": "ESNEXT",
   "moduleResolution": "node",
   "scripts": {
     "test": "ts-node cli.js"
   },
   "devDependencies": {
-    "@types/node": "^16.10.3"
+    "@types/node-fetch": "^3.0.3",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.2"
   },
   "dependencies": {
-    "typescript": "^4.4.4"
+    "node-fetch": "^3.0.0"
   }
 }
